crow recipe fixed